1. 实现简单过关逻辑 2. 为游戏主界面添加浮动按钮

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,10 @@
 
     </LinearLayout>
 
+    <!-- Float buttons -->
+    <include layout="@layout/float_buttons" />
+
+    <!--UI of passing barier-->
+    <include layout="@layout/pass_view" />
+
 </FrameLayout>
